<resources>
    <string name="app_name">CutieHacksProject2020</string>
    <string name="server_client_id">510879454537-ctj97pcv4sp98ve5vkeiv5asjng9da7b.apps.googleusercontent.com</string>
    <string name="app">Rate my Pet</string>
    <string name="title_home">Home</string>
    <string name="title_feed">Feed</string>
    <string name="title_add_friend">Add Friend</string>
    <string name="title_menu">Menu</string>
    <string name="addfriend">Connect</string>
    <string name="addpic">Send a Picture</string>
    <string name="send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share your cutie here</string>
    <string name="upload">Upload</string>
    <string name="create_post">Create Post</string>
    <string name="choose_image">Choose Image</string>
    <string name="cancel">Cancel Claim</string>
    <string name="loading">Loading...</string>
    <string name="people_who_want_this">People who want this:</string>
    <string name="draw_winner">Draw Winner</string>
    <string name="be_the_first_to_claim_this_item">Be the first to claim this item</string>
    <string name="i_want_this">I want this</string>
    <string name="no_claimers_yet_msg">No claimers yet</string>
    <string name="write_a_description">Write a description</string>
    <string name="draw_a_winner">Draw a Winner</string>
    <string name="draw_winner_prompt">Are you sure you want to draw a winner?</string>
    <string name="accept">yes</string>
    <string name="no">no</string>
    <string name="the_winner_is">The winner is :</string>
    <string name="contact_with_host">Contact with Host</string>
    <string name="gift">GIFT</string>
    <string name="a_gesture_of_kindness">A gesture of Kindness</string>
    <string name="sign_in">Sign In</string>
</resources>